--- a/app/src/main/res/layouts/shared/layout/card_event_result_header.xml
+++ b/app/src/main/res/layouts/shared/layout/card_event_result_header.xml
@@ -19,12 +19,12 @@
 
         <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/activity_horizontal_margin">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/activity_vertical_margin"
                 android:layout_gravity="start"
                 android:gravity="center_horizontal"
                 android:textAppearance="@style/text_bold_grey_small"
@@ -33,7 +33,6 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/activity_vertical_margin"
                 android:layout_gravity="end"
                 android:gravity="center_horizontal"
                 android:textAppearance="@style/text_bold_grey_small"
