--- a/app/src/main/res/layouts/shared/layout/activity_create_series.xml
+++ b/app/src/main/res/layouts/shared/layout/activity_create_series.xml
@@ -13,7 +13,7 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorPrimaryDark">
+        android:background="?colorPrimaryDark">
 
         <android.support.design.widget.AppBarLayout
             android:id="@+id/app_bar_layout"
