--- a/app/src/main/res/layouts/shared/layout/activity_settings.xml
+++ b/app/src/main/res/layouts/shared/layout/activity_settings.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:bind="http://schemas.android.com/tools">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:background="@color/colorPrimaryDark">
+        android:background="?colorPrimaryDark">
 
         <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
