--- a/app/src/main/res/layouts/shared/layout/card_event_result_header.xml
+++ b/app/src/main/res/layouts/shared/layout/card_event_result_header.xml
@@ -20,7 +20,10 @@
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/activity_horizontal_margin">
+            android:layout_marginStart="@dimen/activity_vertical_margin"
+            android:layout_marginEnd="@dimen/activity_vertical_margin"
+            android:layout_marginTop="@dimen/activity_horizontal_margin"
+            android:layout_marginBottom="@dimen/activity_horizontal_margin">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -42,8 +45,8 @@
         </FrameLayout>
 
         <View style="@style/Divider"
-            android:layout_marginStart="@dimen/activity_horizontal_margin"
-            android:layout_marginEnd="@dimen/activity_horizontal_margin"/>
+            android:layout_marginStart="@dimen/activity_vertical_margin"
+            android:layout_marginEnd="@dimen/activity_vertical_margin"/>
 
         <include
             layout="@layout/item_event_header_team_score"
