--- a/app/src/main/res/layouts/shared/layout/toolbar_event.xml
+++ b/app/src/main/res/layouts/shared/layout/toolbar_event.xml
@@ -12,7 +12,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="@color/cardViewBackground"
+        android:background="?cardViewBackground"
         app:popupTheme="@style/AppTheme.PopupOverlay" >
 
         <LinearLayout
