--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -18,7 +18,7 @@
 
     </PreferenceCategory>
 
-    <PreferenceCategory android:title="@string/theme">
+    <PreferenceCategory android:title="@string/look_and_feel">
 
         <SwitchPreference
             android:key="@string/darkTheme"
