--- a/app/src/main/res/layouts/shared/layout/pref_dialog_theme.xml
+++ b/app/src/main/res/layouts/shared/layout/pref_dialog_theme.xml
@@ -4,6 +4,7 @@
     android:id="@+id/theme_radio_group"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_margin="@dimen/activity_vertical_margin"
     android:orientation="horizontal"
     android:weightSum="3">
 
