--- a/app/src/main/res/layouts/shared/layout/radio_button_theme.xml
+++ b/app/src/main/res/layouts/shared/layout/radio_button_theme.xml
@@ -1,21 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <ImageView
+    <View
         android:id="@+id/theme_preview"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:background="?colorPrimaryDark"/>
+        android:layout_width="80dp"
+        android:layout_height="90dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:layout_marginBottom="@dimen/activity_horizontal_margin"
+        android:background="@drawable/theme_preview"/>
 
     <TextView
         android:id="@+id/theme_text"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"/>
 
     <TextView
         android:id="@+id/checked_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:text="selected"
         android:visibility="gone"/>
 
