--- a/app/src/main/res/layouts/shared/layout/card_event_result_header.xml
+++ b/app/src/main/res/layouts/shared/layout/card_event_result_header.xml
@@ -12,7 +12,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/cardViewBackground"
+        android:background="?cardViewBackground"
         android:orientation="vertical"
         android:elevation="@dimen/elevation"
         app:layout_scrollFlags="scroll|exitUntilCollapsed|enterAlwaysCollapsed">
