--- a/app/src/main/res/layouts/shared/layout/create_event_header.xml
+++ b/app/src/main/res/layouts/shared/layout/create_event_header.xml
@@ -13,7 +13,7 @@
         android:id="@+id/match_header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/cardViewHeaderBackground"
+        android:background="?cardViewBackground"
         android:elevation="@dimen/elevation">
 
         <de.hdodenhof.circleimageview.CircleImageView
