--- a/app/src/main/res/layouts/shared/layout/create_series_score_summary.xml
+++ b/app/src/main/res/layouts/shared/layout/create_series_score_summary.xml
@@ -16,7 +16,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/activity_horizontal_margin"
         android:orientation="horizontal"
-        android:background="@color/cardViewHeaderBackground"
+        android:background="?cardViewBackground"
         android:elevation="@dimen/cardview_default_elevation">
 
         <de.hdodenhof.circleimageview.CircleImageView
