--- a/app/src/main/res/layouts/shared/layout/footer_buttons.xml
+++ b/app/src/main/res/layouts/shared/layout/footer_buttons.xml
@@ -12,7 +12,7 @@
         android:id="@+id/button_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimaryDark"
+        android:background="?colorPrimaryDark"
         android:orientation="vertical"
         app:slideVisibility="@{buttonsViewModel.footerVisibility}">
 
