--- a/app/src/main/res/layouts/shared/layout/item_boxscore.xml
+++ b/app/src/main/res/layouts/shared/layout/item_boxscore.xml
@@ -46,7 +46,7 @@
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginEnd="@{fulltime ? @dimen/activity_horizontal_margin : 0f}"
-            android:background="@color/cardViewHeaderBackground"/>
+            android:background="?cardViewHeaderBackground"/>
 
         <TextView
             android:layout_width="match_parent"
