--- a/app/src/main/res/layouts/useroverview/layout/records_value_item.xml
+++ b/app/src/main/res/layouts/useroverview/layout/records_value_item.xml
@@ -22,7 +22,7 @@
             android:layout_gravity="center"
             android:gravity="center"
             android:paddingTop="@dimen/record_item_vertical_padding"
-            android:textColor="@color/white"
+            android:textColor="?android:textColorPrimary"
             android:textSize="18sp"
             android:text="@{value}"/>
 
