--- a/app/src/main/res/layouts/shared/layout/pref_dialog_theme.xml
+++ b/app/src/main/res/layouts/shared/layout/pref_dialog_theme.xml
@@ -31,8 +31,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:theme="@style/AppTheme.Cobalt"
-        app:text="@string/cobalt"
-        app:buttonTheme="@style/AppTheme.Cobalt"/>
+        android:theme="@style/AppTheme.Light"
+        app:text="@string/light"
+        app:buttonTheme="@style/AppTheme.Light"/>
 
 </com.example.kevin.fifastatistics.views.ThemeRadioGroup>
