--- a/app/src/main/res/layouts/shared/layout/card_boxscore.xml
+++ b/app/src/main/res/layouts/shared/layout/card_boxscore.xml
@@ -71,7 +71,7 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:background="@color/cardViewHeaderBackground"/>
+                    android:background="?cardViewHeaderBackground"/>
 
                 <LinearLayout
                     android:id="@+id/bottom_player_layout"
