--- a/app/src/main/res/layouts/shared/layout/item_series_match.xml
+++ b/app/src/main/res/layouts/shared/layout/item_series_match.xml
@@ -9,7 +9,11 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/activity_horizontal_margin"
+        android:layout_marginEnd="@dimen/activity_vertical_margin"
+        android:background="?selectableItemBackground"
+        android:onClick="@{() -> viewModel.onClick()}">
 
         <TextView
             android:layout_width="wrap_content"
@@ -37,6 +41,9 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:layout_marginBottom="@dimen/activity_vertical_margin"
             android:gravity="center"
             android:textAppearance="@style/text_small"
             android:text="@{viewModel.score}"/>
@@ -46,6 +53,7 @@
             android:layout_height="wrap_content"
             android:layout_toEndOf="@id/score_textview"
             android:layout_centerVertical="true"
+            android:layout_marginStart="@dimen/activity_horizontal_margin"
             android:gravity="center"
             android:textAppearance="@style/text_grey_small"
             android:text="@{viewModel.rightPenalties}"
@@ -56,10 +64,16 @@
             android:layout_height="wrap_content"
             android:layout_toStartOf="@id/score_textview"
             android:layout_centerVertical="true"
+            android:layout_marginEnd="@dimen/activity_horizontal_margin"
             android:gravity="center"
             android:textAppearance="@style/text_grey_small"
             android:text="@{viewModel.leftPenalties}"
             android:visibility="@{viewModel.penaltiesVisibility}"/>
+
+        <View
+            android:layout_alignParentBottom="true"
+            android:visibility="@{viewModel.dividerVisibility}"
+            style="@style/Divider"/>
 
     </RelativeLayout>
 
