--- a/app/src/main/res/layouts/shared/layout/item_series_match.xml
+++ b/app/src/main/res/layouts/shared/layout/item_series_match.xml
@@ -10,8 +10,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_marginEnd="@dimen/activity_vertical_margin"
+        android:paddingStart="@dimen/activity_horizontal_margin"
+        android:paddingEnd="@dimen/activity_vertical_margin"
         android:background="?selectableItemBackground"
         android:onClick="@{() -> viewModel.onClick()}">
 
